fix: Fixed multiple issues found by SpotBugs